@@ -237,6 +237,9 @@ BUGFIXES:
   ZOOKEEPER-683. LogFormatter fails to parse transactional log files (phunt
   via mahadev)
 
+  ZOOKEEPER-682. Event is not processed when the watcher is set to watch "/"
+  if chrooted (Scott Wang via mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
